--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
   padding-top: 20px;
-  /* font-family: "Geo", Arial; */
+  font-family: "Teko", Arial;
   color: white;
   text-shadow: 2px 2px 4px #000;
   background: url("../images/bg.png") no-repeat;
